Create Part 1 Database

--- a/Hotels.Model/Hotels.Model.csproj
+++ b/Hotels.Model/Hotels.Model.csproj
@@ -49,12 +49,28 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Employee.cs" />
+    <Compile Include="Guest.cs" />
     <Compile Include="HotelDb.cs" />
+    <Compile Include="Migrations\201711251859133_first.cs" />
+    <Compile Include="Migrations\201711251859133_first.Designer.cs">
+      <DependentUpon>201711251859133_first.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
+    <Compile Include="Passenger.cs" />
+    <Compile Include="Person.cs" />
+    <Compile Include="Phone.cs" />
+    <Compile Include="PhoneType.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201711251859133_first.resx">
+      <DependentUpon>201711251859133_first.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
