--- a/Hotels.Model/App.config
+++ b/Hotels.Model/App.config
@@ -15,6 +15,8 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="HotelDb" connectionString="data source=(LocalDb)\MSSQLLocalDB;initial catalog=Hotels.Model.HotelDb;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="HotelDb" 
+         connectionString="Server=.;database=HotelDb;uid=sa;pwd=1234" 
+         providerName="System.Data.SqlClient" />
   </connectionStrings>
 </configuration>
