Edit and Delete Added

--- a/HotelWebSite/HotelWebSite.csproj
+++ b/HotelWebSite/HotelWebSite.csproj
@@ -166,6 +166,8 @@
     <Content Include="Views\web.config" />
     <None Include="packages.config" />
     <Content Include="Scripts\jquery-1.12.4.min.map" />
+    <Content Include="Views\Employee\Delete.cshtml" />
+    <Content Include="Views\Employee\Edit.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
