--- a/Hotels.Model/Hotels.Model.csproj
+++ b/Hotels.Model/Hotels.Model.csproj
@@ -31,10 +31,10 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
-      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.dll</HintPath>
+      <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.dll</HintPath>
     </Reference>
     <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
-      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.SqlServer.dll</HintPath>
+      <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.SqlServer.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
@@ -53,9 +53,17 @@
     <Compile Include="Employee.cs" />
     <Compile Include="Guest.cs" />
     <Compile Include="HotelDb.cs" />
-    <Compile Include="Migrations\201712020733402_First.cs" />
-    <Compile Include="Migrations\201712020733402_First.Designer.cs">
-      <DependentUpon>201712020733402_First.cs</DependentUpon>
+    <Compile Include="Migrations\201712030240476_First.cs" />
+    <Compile Include="Migrations\201712030240476_First.Designer.cs">
+      <DependentUpon>201712030240476_First.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201712030347491_First1.cs" />
+    <Compile Include="Migrations\201712030347491_First1.Designer.cs">
+      <DependentUpon>201712030347491_First1.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201712030350114_First2.cs" />
+    <Compile Include="Migrations\201712030350114_First2.Designer.cs">
+      <DependentUpon>201712030350114_First2.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Option.cs" />
@@ -70,10 +78,22 @@
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
+    <None Include="Scripts\jquery-1.12.4.min.map" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\201712020733402_First.resx">
-      <DependentUpon>201712020733402_First.cs</DependentUpon>
+    <Content Include="Scripts\jquery-1.12.4.intellisense.js" />
+    <Content Include="Scripts\jquery-1.12.4.js" />
+    <Content Include="Scripts\jquery-1.12.4.min.js" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201712030240476_First.resx">
+      <DependentUpon>201712030240476_First.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201712030347491_First1.resx">
+      <DependentUpon>201712030347491_First1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201712030350114_First2.resx">
+      <DependentUpon>201712030350114_First2.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
