Authentication and Authorization Complete

--- a/Hotels.Model/Hotels.Model.csproj
+++ b/Hotels.Model/Hotels.Model.csproj
@@ -53,9 +53,14 @@
     <Compile Include="Employee.cs" />
     <Compile Include="Guest.cs" />
     <Compile Include="HotelDb.cs" />
+    <Compile Include="Library\PassHash.cs" />
     <Compile Include="Migrations\201712022013138_First.cs" />
     <Compile Include="Migrations\201712022013138_First.Designer.cs">
       <DependentUpon>201712022013138_First.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201712030858226_First1.cs" />
+    <Compile Include="Migrations\201712030858226_First1.Designer.cs">
+      <DependentUpon>201712030858226_First1.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Option.cs" />
@@ -80,6 +85,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\201712022013138_First.resx">
       <DependentUpon>201712022013138_First.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201712030858226_First1.resx">
+      <DependentUpon>201712030858226_First1.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
