--- a/HotelWebSite/HotelWebSite.csproj
+++ b/HotelWebSite/HotelWebSite.csproj
@@ -171,10 +171,15 @@
     <Compile Include="Controllers\GuestController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\PassengerController.cs" />
+    <Compile Include="Controllers\SecurityController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Library\AuthorizeEmployeeAttribute.cs" />
+    <Compile Include="Library\Security.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ViewModels\PassengerGuestInfo.cs" />
+    <Compile Include="ViewModels\SecurityLogin.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\web.config" />
@@ -191,6 +196,8 @@
     <Content Include="Views\Passenger\Delete.cshtml" />
     <Content Include="Views\Passenger\Edit.cshtml" />
     <Content Include="Views\Guest\Edit.cshtml" />
+    <Content Include="Views\Security\Login.cshtml" />
+    <Content Include="Views\Guest\ListPlus.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
