--- a/HotelWebSite/HotelWebSite.csproj
+++ b/HotelWebSite/HotelWebSite.csproj
@@ -167,19 +167,24 @@
   <ItemGroup>
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
+    <Compile Include="Controllers\BookingController.cs" />
     <Compile Include="Controllers\EmployeeController.cs" />
     <Compile Include="Controllers\GuestController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\PassengerController.cs" />
     <Compile Include="Controllers\SecurityController.cs" />
+    <Compile Include="Controllers\SuitController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Library\AuthorizeEmployeeAttribute.cs" />
     <Compile Include="Library\Security.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ViewModels\PassengerGuestInfo.cs" />
+    <Compile Include="ViewModels\BookingCreate.cs" />
+    <Compile Include="ViewModels\EmployeeCreate.cs" />
+    <Compile Include="ViewModels\PassengerCreate.cs" />
     <Compile Include="ViewModels\SecurityLogin.cs" />
+    <Compile Include="ViewModels\SuitCreate.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\web.config" />
@@ -197,7 +202,12 @@
     <Content Include="Views\Passenger\Edit.cshtml" />
     <Content Include="Views\Guest\Edit.cshtml" />
     <Content Include="Views\Security\Login.cshtml" />
-    <Content Include="Views\Guest\ListPlus.cshtml" />
+    <Content Include="Views\Suit\Create.cshtml" />
+    <Content Include="Views\Booking\Create.cshtml" />
+    <Content Include="Views\Suit\SuitBooking.cshtml" />
+    <Content Include="Views\Suit\Index.cshtml" />
+    <Content Include="Views\Booking\SuitBookingSearch.cshtml" />
+    <Content Include="Views\Suit\Menu.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -208,6 +218,7 @@
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Models\" />
+    <Folder Include="Photos\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Hotels.Model\Hotels.Model.csproj">
